// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationModal /> renders closed modal 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
</DocumentFragment>
`;

exports[`<RegistrationModal /> renders modal with top and bottom text 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    aria-label="global.register"
    data-dialog="true"
    id="id-g"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="sc-bcXGCL embsrb sc-jRwapC cap-modal__overlay"
      style="opacity: 0;"
    >
      <div
        class="sc-bcXGCL dRDYMK sc-fvEvfv iKfoPd cap-modal"
        style="z-index: 9000; opacity: 0; transform: translateY(-20px) translateZ(0);"
      >
        <div
          class="sc-bcXGCL jJSzZW cap-modal__header"
        >
          <div
            class="sc-bcXGCL jevVsb"
          >
            <h4
              class="sc-bcXGCL dwAFlO cap-heading"
              id="modal-title"
              style="margin-left: 0px; margin-top: 0px;"
            >
              global.register
            </h4>
          </div>
          <button
            aria-describedby="modal-title"
            class="sc-bcXGCL cNICVM"
            type="button"
          >
            <svg
              aria-hidden="false"
              class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon"
              fill="none"
              height="1em"
              role="img"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11 11 1M1 1l10 10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="0.8"
              />
            </svg>
          </button>
        </div>
        <div
          class="sc-bcXGCL eqUaSq cap-modal__body"
        >
          <div
            class="sc-bcXGCL iAhoTX"
          >
            <div
              class=" ql-editor wysiwyg-render"
            >
              Jsuis o top
            </div>
          </div>
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL fTPHCc cap-form-label"
              for=":r0:"
              style="margin-left: 0px; margin-top: 0px;"
            >
              <span
                class="sc-bcXGCL dQChsN cap-text"
                style="margin-left: 0px; margin-top: 0px;"
              >
                global.email
              </span>
            </label>
            <input
              aria-required="true"
              autocomplete="email"
              class="sc-bcXGCL sc-fXqqsB egzrup ieLfuE cap-input"
              id=":r0:"
              name="email"
              placeholder="email.placeholder"
              required=""
              type="email"
            />
          </div>
          <div
            class="sc-bcXGCL klvDp"
          >
            <div
              class="sc-bcXGCL hQCGLB cap-form-control"
            >
              <label
                class="sc-bcXGCL fTPHCc cap-form-label"
                for=":r1:"
                style="margin-left: 0px; margin-top: 0px;"
              >
                <span
                  class="sc-bcXGCL dQChsN cap-text"
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  registration.password
                </span>
              </label>
              <div
                class="sc-bcXGCL sc-fXqqsB hsfhbV ieLfuE cap-input-outer"
              >
                <input
                  aria-required="true"
                  autocomplete="off"
                  class="sc-bcXGCL dANhtW cap-input"
                  id=":r1:"
                  name="plainPassword"
                  required=""
                  type="password"
                />
                <button
                  aria-describedby=":r2:"
                  class="sc-bcXGCL fROdoz"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-input-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 10"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1.903 9 8.333-8M4.65 8.134c.437.135.892.203 1.35.2 1.822.03 3.67-1.25 4.81-2.506a.74.74 0 0 0 0-.99 9 9 0 0 0-1.366-1.225M7.072 2.459a4.2 4.2 0 0 0-1.073-.126c-1.791-.03-3.644 1.223-4.81 2.505a.74.74 0 0 0 0 .99q.534.582 1.156 1.066"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="0.8"
                    />
                    <path
                      d="M4.333 5.333a1.666 1.666 0 0 1 1.666-1.666M7.666 5.333A1.667 1.667 0 0 1 5.999 7"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="0.8"
                    />
                  </svg>
                </button>
                <div
                  style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
                >
                  <div
                    class="cap-tooltip"
                    data-dialog=""
                    data-placing="true"
                    hidden=""
                    id=":r2:"
                    role="tooltip"
                    style="position: relative; z-index: 1800; display: none;"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            fill="none"
                            mask="url(#:r8:)"
                          />
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            stroke="none"
                          />
                          <mask
                            id=":r8:"
                            maskUnits="userSpaceOnUse"
                          >
                            <rect
                              fill="white"
                              height="30"
                              stroke="black"
                              width="60"
                              x="-15"
                              y="0"
                            />
                          </mask>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="sc-bcXGCL bdghCN"
                    >
                      global.password.show
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL fTPHCc cap-form-label"
              for="username"
              style="margin-left: 0px; margin-top: 0px;"
            >
              <span
                class="sc-bcXGCL dQChsN cap-text"
                style="margin-left: 0px; margin-top: 0px;"
              >
                global.fullname
              </span>
            </label>
            <input
              aria-required="true"
              autocomplete="username"
              class="sc-bcXGCL sc-fXqqsB egzrup ieLfuE cap-input"
              id="username"
              minlength="2"
              name="username"
              placeholder="global.placeholder.name"
              required=""
              type="text"
            />
          </div>
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL fTPHCc cap-form-label"
              for="responses.0.value"
            >
              <span
                class="sc-bcXGCL dQChsN cap-text"
                style="margin-left: 0px; margin-top: 0px;"
              >
                &lt;mock-value-for-field-"title"&gt;
              </span>
              <p
                class="sc-bcXGCL gPctOm cap-text"
              >
                global.optional
              </p>
            </label>
            <span
              class="sc-bcXGCL ifYgMR cap-form-guideline"
            >
              &lt;mock-value-for-field-"helpText"&gt;
            </span>
            <div
              class=" ql-editor wysiwyg-render"
            >
              <mock-value-for-field-"description" />
            </div>
            <input
              aria-required="false"
              class="sc-bcXGCL sc-fXqqsB egzrup ieLfuE cap-input"
              id="responses.0.value"
              name="responses.0.value"
              type="text"
            />
          </div>
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL hICbbA"
              for="charte"
            >
              <div
                class="sc-bcXGCL dawbeU cap-checkbox"
                style="margin-left: 0px; margin-top: 0px;"
              >
                <input
                  aria-required="true"
                  class="sc-bcXGCL leuqnG cap-checkbox__input"
                  id="charte"
                  name="charte"
                  required=""
                  style="margin-left: 0px; margin-top: 0px;"
                  type="checkbox"
                />
                <div
                  class="sc-bcXGCL cCxzTy cap-checkbox__box"
                />
              </div>
              <span
                class="sc-bcXGCL grQllb"
              >
                <span
                  class="sc-bcXGCL sc-aded36a0-0 keKWCf bYouec"
                >
                  registration.charte
                </span>
              </span>
            </label>
          </div>
          <div
            class="sc-bcXGCL kGpePR"
          >
            <div
              class=" ql-editor wysiwyg-render"
            >
              Jsuis o bottom
            </div>
          </div>
        </div>
        <footer
          class="sc-bcXGCL fMWhlA cap-modal__footer"
        >
          <button
            class="sc-bcXGCL sc-gGvGpy kAXCTC iugnuM cap-button"
            style="margin-left: 0px; margin-top: 0px;"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-gGvGpy kAXCTC jrAhSN cap-button"
            id="confirm-login"
            type="submit"
          >
            global.register
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<RegistrationModal /> renders only form 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    aria-label="global.register"
    data-dialog="true"
    id="id-g"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="sc-bcXGCL embsrb sc-jRwapC cap-modal__overlay"
      style="opacity: 0;"
    >
      <div
        class="sc-bcXGCL dRDYMK sc-fvEvfv iKfoPd cap-modal"
        style="z-index: 9000; opacity: 0; transform: translateY(-20px) translateZ(0);"
      >
        <div
          class="sc-bcXGCL jJSzZW cap-modal__header"
        >
          <div
            class="sc-bcXGCL jevVsb"
          >
            <h4
              class="sc-bcXGCL dwAFlO cap-heading"
              id="modal-title"
              style="margin-left: 0px; margin-top: 0px;"
            >
              global.register
            </h4>
          </div>
          <button
            aria-describedby="modal-title"
            class="sc-bcXGCL cNICVM"
            type="button"
          >
            <svg
              aria-hidden="false"
              class="sc-bcXGCL sc-oZHua JBVPO cCzERh cap-icon"
              fill="none"
              height="1em"
              role="img"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1 11 11 1M1 1l10 10"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="0.8"
              />
            </svg>
          </button>
        </div>
        <div
          class="sc-bcXGCL eqUaSq cap-modal__body"
        >
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL fTPHCc cap-form-label"
              for=":r9:"
              style="margin-left: 0px; margin-top: 0px;"
            >
              <span
                class="sc-bcXGCL dQChsN cap-text"
                style="margin-left: 0px; margin-top: 0px;"
              >
                global.email
              </span>
            </label>
            <input
              aria-required="true"
              autocomplete="email"
              class="sc-bcXGCL sc-fXqqsB egzrup ieLfuE cap-input"
              id=":r9:"
              name="email"
              placeholder="email.placeholder"
              required=""
              type="email"
            />
          </div>
          <div
            class="sc-bcXGCL klvDp"
          >
            <div
              class="sc-bcXGCL hQCGLB cap-form-control"
            >
              <label
                class="sc-bcXGCL fTPHCc cap-form-label"
                for=":ra:"
                style="margin-left: 0px; margin-top: 0px;"
              >
                <span
                  class="sc-bcXGCL dQChsN cap-text"
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  registration.password
                </span>
              </label>
              <div
                class="sc-bcXGCL sc-fXqqsB hsfhbV ieLfuE cap-input-outer"
              >
                <input
                  aria-required="true"
                  autocomplete="off"
                  class="sc-bcXGCL dANhtW cap-input"
                  id=":ra:"
                  name="plainPassword"
                  required=""
                  type="password"
                />
                <button
                  aria-describedby=":rb:"
                  class="sc-bcXGCL fROdoz"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="sc-bcXGCL sc-oZHua dXTqeC hQQZty cap-icon cap-input-icon"
                    fill="none"
                    height="1em"
                    viewBox="0 0 12 10"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m1.903 9 8.333-8M4.65 8.134c.437.135.892.203 1.35.2 1.822.03 3.67-1.25 4.81-2.506a.74.74 0 0 0 0-.99 9 9 0 0 0-1.366-1.225M7.072 2.459a4.2 4.2 0 0 0-1.073-.126c-1.791-.03-3.644 1.223-4.81 2.505a.74.74 0 0 0 0 .99q.534.582 1.156 1.066"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="0.8"
                    />
                    <path
                      d="M4.333 5.333a1.666 1.666 0 0 1 1.666-1.666M7.666 5.333A1.667 1.667 0 0 1 5.999 7"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="0.8"
                    />
                  </svg>
                </button>
                <div
                  style="position: absolute; top: 0px; left: 0px; --popover-overflow-padding: 8px;"
                >
                  <div
                    class="cap-tooltip"
                    data-dialog=""
                    data-placing="true"
                    hidden=""
                    id=":rb:"
                    role="tooltip"
                    style="position: relative; z-index: 1800; display: none;"
                    tabindex="-1"
                  >
                    <div
                      aria-hidden="true"
                      style="position: absolute; font-size: 16px; width: 1em; height: 1em; pointer-events: none; fill: #3D454C; stroke: var(--ak-layer-border, none); stroke-width: 0;"
                    >
                      <svg
                        display="block"
                        viewBox="0 0 30 30"
                      >
                        <g
                          transform="rotate(180 15 15)"
                        >
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            fill="none"
                            mask="url(#:rh:)"
                          />
                          <path
                            d="M23 27.8C24.1 29 26.4 30 28 30H30H0H2C3.7 30 5.9 29 7 27.8L14 20.6C14.7 19.8 15.3 19.8 16 20.6L23 27.8Z"
                            stroke="none"
                          />
                          <mask
                            id=":rh:"
                            maskUnits="userSpaceOnUse"
                          >
                            <rect
                              fill="white"
                              height="30"
                              stroke="black"
                              width="60"
                              x="-15"
                              y="0"
                            />
                          </mask>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="sc-bcXGCL bdghCN"
                    >
                      global.password.show
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL fTPHCc cap-form-label"
              for="username"
              style="margin-left: 0px; margin-top: 0px;"
            >
              <span
                class="sc-bcXGCL dQChsN cap-text"
                style="margin-left: 0px; margin-top: 0px;"
              >
                global.fullname
              </span>
            </label>
            <input
              aria-required="true"
              autocomplete="username"
              class="sc-bcXGCL sc-fXqqsB egzrup ieLfuE cap-input"
              id="username"
              minlength="2"
              name="username"
              placeholder="global.placeholder.name"
              required=""
              type="text"
            />
          </div>
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL fTPHCc cap-form-label"
              for="responses.0.value"
            >
              <span
                class="sc-bcXGCL dQChsN cap-text"
                style="margin-left: 0px; margin-top: 0px;"
              >
                &lt;mock-value-for-field-"title"&gt;
              </span>
              <p
                class="sc-bcXGCL gPctOm cap-text"
              >
                global.optional
              </p>
            </label>
            <span
              class="sc-bcXGCL ifYgMR cap-form-guideline"
            >
              &lt;mock-value-for-field-"helpText"&gt;
            </span>
            <div
              class=" ql-editor wysiwyg-render"
            >
              <mock-value-for-field-"description" />
            </div>
            <input
              aria-required="false"
              class="sc-bcXGCL sc-fXqqsB egzrup ieLfuE cap-input"
              id="responses.0.value"
              name="responses.0.value"
              type="text"
            />
          </div>
          <div
            class="sc-bcXGCL fVgOgb cap-form-control"
          >
            <label
              class="sc-bcXGCL hICbbA"
              for="charte"
            >
              <div
                class="sc-bcXGCL dawbeU cap-checkbox"
                style="margin-left: 0px; margin-top: 0px;"
              >
                <input
                  aria-required="true"
                  class="sc-bcXGCL leuqnG cap-checkbox__input"
                  id="charte"
                  name="charte"
                  required=""
                  style="margin-left: 0px; margin-top: 0px;"
                  type="checkbox"
                />
                <div
                  class="sc-bcXGCL cCxzTy cap-checkbox__box"
                />
              </div>
              <span
                class="sc-bcXGCL grQllb"
              >
                <span
                  class="sc-bcXGCL sc-aded36a0-0 keKWCf bYouec"
                >
                  registration.charte
                </span>
              </span>
            </label>
          </div>
        </div>
        <footer
          class="sc-bcXGCL fMWhlA cap-modal__footer"
        >
          <button
            class="sc-bcXGCL sc-gGvGpy kAXCTC iugnuM cap-button"
            style="margin-left: 0px; margin-top: 0px;"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-gGvGpy kAXCTC jrAhSN cap-button"
            id="confirm-login"
            type="submit"
          >
            global.register
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
